fix portfolio on mobileand tablet

--- a/code/css/mobile-first.css
+++ b/code/css/mobile-first.css
@@ -414,7 +414,7 @@ button:hover{
   width:100%;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
   overflow:hidden;
 }
 figure .site-example{
@@ -631,7 +631,7 @@ footer a{
     .tagline h2{
       font-size: 2.5em;
     }
-    .about-me h3, .services h3, .contact h3{
+    .about-me h3, .services h3, .contact h3, .portfolio h3{
       font-size: 2.5em;
       width: 98%;
       padding: 1%;
@@ -658,6 +658,15 @@ footer a{
       justify-content: center;
       align-items: center;
     }
+    .site-wrapper {
+      flex-flow: column;
+      justify-content: space-around;
+      align-items:center;
+      font-size: 1.4em;
+    }
+      figure .site-example {
+        /*width: 50%;*/
+      }
     .services{
       /*display:flex;
       flex-direction: column;
@@ -791,10 +800,13 @@ footer a{
     width:30%;
     padding:2%;
   }
-  .about-me h3, .services h3, .contact h3{
+  .about-me h3, .services h3, .contact h3, .portfolio h3{
     font-size: 2.5em;
     width: 98%;
     padding: 1%;
+  }
+  .site-wrapper{
+    flex-flow: row;
   }
   #col-1{
     float:left;
